deploy/k8s/linas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: linas-api
  ports:
    - name: http
      port: 80
      targetPort: 8003
